phoneBook.js added

--- a/PhoneBook.DataAccess/PhoneBook.DataAccess.csproj
+++ b/PhoneBook.DataAccess/PhoneBook.DataAccess.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201811080801309_InitialCreate.cs" />
+    <Compile Include="Migrations\201811080801309_InitialCreate.Designer.cs">
+      <DependentUpon>201811080801309_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="PhoneBookDbContext.cs" />
@@ -56,6 +60,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201811080801309_InitialCreate.resx">
+      <DependentUpon>201811080801309_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
